[gd_scene load_steps=3 format=2]

[ext_resource path="res://enemies/HeadyHandBaller/HeadyHandBallerProjectileSplat.gd" type="Script" id=1]
[ext_resource path="res://enemies/HeadyHandBaller/SplatPart.tscn" type="PackedScene" id=2]

[node name="HeadyHandBallerProjectileSplat" type="Spatial"]
script = ExtResource( 1 )

[node name="SplatSeparationTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SplatPart" parent="." instance=ExtResource( 2 )]

[node name="SplatLifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SplatAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 11.814
autoplay = true
attenuation_filter_cutoff_hz = 10000.0
